# fintech-risk

./: .env.example  .gitignore  README.md  pyproject.toml
artifacts/fraud_iforest/: calibrator.joblib  metrics.json  model_type.json  vectorizer_spec.json
artifacts/fraud_iforest/v1/: model.joblib
artifacts/fraud_xgb/: calibrator.joblib  metrics.json  model.joblib  model_type.json
artifacts/rag_store/: docs.json  index.faiss
artifacts/text/: label_index__374f4457ac09__text-embedding-3-small.json  label_index__d1434bc61bcf__text-embedding-3-small.json
configs/: risk_taxonomy.yaml
db/: schema.sql
libs/ai/embeddings/: gateway.py
libs/ai/embeddings/providers/: openai_provider.py
libs/ai/langchain/: chain.py
libs/ai/llm/: gateway.py  prompts.py
libs/ai/llm/providers/: openai_provider.py
libs/ai/rag/: build_store.py  retriever.py  vector_store.py
libs/ai/vectorstore/: faiss_store.py
libs/audit/: noop.py  writer.py
libs/core/: context.py
libs/core/config/: api.py  base.py  training.py  worker.py
libs/core/logging/: logger.py
libs/ml/fraud/: calibrate_scores.py  calibration.py  explain.py  loader.py  trainer.py  trainer_xgb.py  vectorizer.py
libs/ml/registry/: interface.py  s3_registry.py
libs/risk/: orchestrator.py  service.py
libs/risk/audit/: hasher.py
libs/risk/decisioning/: engine.py  evidence.py  provenance.py  reasons.py  types.py
libs/risk/explanations/: generator.py
libs/risk/fraud/: __init__.py  engine.py  features.py  schema.py  scorer.py
libs/risk/taxonomy/: __init__.py  loader.py  schema.py
libs/risk/text/: embeddings.py  engine.py  label_index.py  retrieval.py  rules.py  schema.py  similarity.py
services/risk_api/app/: main.py  settings.py
services/risk_api/app/api/: metrics.py  risk.py  routes.py
services/risk_api/app/middleware/: logging.py  metrics.py  request_context.py
synthetic_data/fraud/: generator.py
(+4 files in other folders)
